--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^5.10.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
