--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "prisma": "^5.10.0",
     "ts-node-dev": "^2.0.0",
