--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "prisma generate && node dist/server.js"
   },
   "keywords": [],
   "author": "",
